--- a/extension/popup.html
+++ b/extension/popup.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <button id="add-rule">+</button>
-    <button id="refresh">Refresh</button>
+    <button id="remove-rule">-</button>
     <label for="toggle">On/Off:</label>
     <input type="checkbox" id="toggle">
 </body>
