Change button name

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -14,7 +14,7 @@
     </div>
     <button id="add-rule">+</button>
     <button id="remove-rule">-</button>
-    <label for="toggle">On/Off:</label>
+    <label for="toggle">Filter On:</label>
     <input type="checkbox" id="toggle">
 </body>
 </html>
