--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,6 +6,8 @@
     <script src="popup.js"></script>
 </head>
 <body>
+    <label for="port">Port:</label>
+    <input type="number" id="port" value="8080">
     <div id="rules-container">
         <div class="rule">
             <input type="text" placeholder="Enter a rule">
