Add openai api key to popup

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -8,6 +8,8 @@
 <body>
     <label for="port">Port:</label>
     <input type="number" id="port" value="8080">
+    <label for="api-key">API Key:</label>
+    <input type="text" id="api-key" placeholder="Enter OpenAI API Key">
     <div id="rules-container">
         <div class="rule">
             <input type="text" placeholder="Enter a rule">
