Use a save button instead of this stupid debounce

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -20,5 +20,6 @@
     <button id="remove-rule">-</button>
     <label for="toggle">Filter On:</label>
     <input type="checkbox" id="toggle">
+    <button id="save">Save</button>
 </body>
 </html>
