--- a/pkg/extension/popup.html
+++ b/pkg/extension/popup.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Extension Settings</title>
+    <title>Kinode Twitter Filter</title>
     <link rel="stylesheet" href="popup.css">
     <script src="popup.js"></script>
 </head>
 <body>
+    <h1>Kinode Twitter Filter</h1>
     <label for="port">Port:</label>
     <input type="number" id="port" value="8080">
     <label for="api-key">API Key:</label>
