--- a/pkg/extension/popup.html
+++ b/pkg/extension/popup.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Kinode Twitter Filter</title>
     <link rel="stylesheet" href="popup.css">
     <script src="popup.js"></script>
 </head>
+
 <body>
     <h1>Kinode Twitter Filter</h1>
-    <label for="port">Port:</label>
-    <input type="number" id="port" value="8080">
-    <label for="api-key">API Key:</label>
-    <input type="text" id="api-key" placeholder="Enter OpenAI API Key">
+    <div class="row input-container">
+        <label style="margin-bottom: 4px" for="toggle">Filter On:</label>
+        <div style="position: relative;">
+            <input style="margin-left: 4px" type="checkbox" id="toggle">
+            <span id="checkmark" class="checkmark">&#10003;</span>
+        </div>
+    </div>
+    <div class="row input-container">
+        <label for="port">Port:</label>
+        <input type="number" id="port" value="8080">
+    </div>
+    <div class="row input-container">
+        <label for="api-key">API Key:</label>
+        <input type="text" id="api-key" placeholder="Enter OpenAI API Key">
+    </div>
     <div id="rules-container">
     </div>
-    <button id="add-rule">+</button>
-    <button id="remove-rule">-</button>
-    <label for="toggle">Filter On:</label>
-    <input type="checkbox" id="toggle">
-    <button id="save">Save</button>
+    <div class="row input-container">
+        <button style="margin-right: 12px" id="add-rule">+</button>
+        <button style="margin-right: 12px" id="remove-rule">-</button>
+        <button id="save">Save</button>
+    </div>
 </body>
+
 </html>
